--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,3 +4,26 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
+jobs:
+  release:
+    name: Release varslist gem
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Build gem
+        run: gem build varslist.gemspec
+
+      - name: Publish gem
+        run: gem push varslist-*.gem
